--- a/aniversario_punch.html
+++ b/aniversario_punch.html
@@ -145,7 +145,7 @@
             </div>
         </div>
     </header>
-    <main class="a-project green-element aniversario_punch">
+    <main class="a-project green-element aniversario_punch fade-in">
         <div class="container-fluid">
             <div class="row show-large">
                 <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
