--- a/contact_me.html
+++ b/contact_me.html
@@ -145,7 +145,7 @@
             </div>
         </div>
     </header>
-    <main class="contact_me">
+    <main class="contact_me fade-in">
         <div class="container-fluid h-100">
             <div class="row show-large h-100">
                 <div class="offset-1 col-4 info d-flex align-items-center">
