--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
                     </div> -->
                     <div class="align-items-center index-carousel d-flex row px-0">
                         <div class="slide fade-in">
-                            <a href="seixal_terno.html" class="big-red">
+                            <img class="bg-image" href="images/seixal_poster_mockup_insta.jpg" alt="Background image">
+                            <a href="seixal_terno.html" class="big-red" style="--bg-image: url('images/seixal_poster_mockup_insta.jpg');">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
                                         <p class="titulo mb-0">Seixal Terno</p>
