--- a/previous_work.html
+++ b/previous_work.html
@@ -148,7 +148,7 @@
             </div>
         </div>
     </header>
-    <main class="container-fluid pb-5 previous_work">
+    <main class="container-fluid pb-5 previous_work fade-in">
         <section class="row">
             <div class="offset-lg-2 col-12 col-lg-8 titulo-1-nivel">
                 <img src="img/AGENDA.svg" class="img-fluid">
@@ -253,7 +253,7 @@
                 </div>
             </a>
 
-            <a href="cereais.html" class="row social_media brand copywriting py-4 cereais">
+            <!-- <a href="cereais.html" class="row social_media brand copywriting py-4 cereais">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Cereais, Bonança</b></p>
                 </div>
@@ -261,7 +261,7 @@
                 <div class="offset-4 col-4 text-start">
                     <p>Brand, Social Media, Copywriting</p>
                 </div>
-            </a>
+            </a> -->
 
             <!-- <a href="a_la_portugaise.html" class="row copywriting py-4 a-la-portugaise">
                 <div class="col-4 d-flex justify-content-end">
@@ -404,7 +404,7 @@
                 <div class="hor-line web-design design"></div>
 
 
-                <a href="cereais.html" class="d-flex social_media brand copywriting align-items-center flex-column py-4 cereais">
+                <!-- <a href="cereais.html" class="d-flex social_media brand copywriting align-items-center flex-column py-4 cereais">
                     <div class=" d-flex">
                         <p><b>Cereais, Bonança</b></p>
                     </div>
@@ -412,7 +412,7 @@
                         <p>Social Media, Brand, Copywriting</p>
                     </div>
                 </a>
-                <div class="hor-line design music copywriting"></div>
+                <div class="hor-line design music copywriting"></div> -->
 
 
                 <!-- <a href="a_la_portugaise.html" class="d-flex align-items-center flex-column copywriting py-4 a-la-portugaise">
