--- a/sel.html
+++ b/sel.html
@@ -145,7 +145,7 @@
             </div>
         </div>
     </header>
-    <main class="a-project red-element sel">
+    <main class="a-project red-element sel fade-in">
         <div class="container-fluid">
             <div class="row show-large">
                 <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
@@ -179,25 +179,61 @@
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex row px-0">
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <iframe width="100%" height="64.5%"
                                 src="https://youtube.com/embed/I3OiJGZEWyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                                </iframe>                            
+                                </iframe> 
+                                <div class="pt-3 slide-description">
+                                    <p>Introductory reel to the Instagram page.</p>
+                                </div>                           
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_logo_simples.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and logo segments.</p>
+                                </div>  
                             </div>
-                            <div class="slide px-3">
+                            <!-- <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_sinais.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and logo segments.</p>
+                                </div> 
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_em.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and logo segments.</p>
+                                </div> 
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_linha.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and logo segments.</p>
+                                </div> 
+                            </div> -->
+                            <div class="slide px-3 d-flex flex-column">
+                                <img src="images/insta_sel.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Instagram post about a new article.</p>
+                                </div> 
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
+                                <img src="images/pc_site_sel.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Article page on website prototype.</p>
+                                </div> 
+                            </div>
+                            <div class="slide px-3 d-flex flex-column">
+                                <img src="images/assets_site_sel.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Color variations according to article genre.</p>
+                                </div> 
+                            </div>
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_agora_tambem.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and different elements.</p>
+                                </div> 
                             </div>
                         </div>
                     </div>
@@ -245,25 +281,55 @@
                 <div class="col-12 d-flex justify-content-center align-items-start subject mb-4">
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex justify-content-center row px-0">
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <iframe width="100%" height="64.5%"
                                 src="https://youtube.com/embed/I3OiJGZEWyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                                </iframe>                            
+                                </iframe> 
+                                <div class="pt-3 slide-description">
+                                    <p>Introductory reel to the Instagram page.</p>
+                                </div>                           
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_logo_simples.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and logo segments.</p>
+                                </div>  
                             </div>
-                            <div class="slide px-3">
+                            <!-- <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_sinais.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and logo segments.</p>
+                                </div> 
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_em.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and logo segments.</p>
+                                </div> 
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_linha.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and logo segments.</p>
+                                </div> 
+                            </div> -->
+                            <div class="slide px-3 d-flex flex-column">
+                                <img src="images/250916_as_mulheres_post.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Instagram post about a new article.</p>
+                                </div> 
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
+                                <img src="images/250927_ok_e_trabalho_post.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Instagram post about a new article.</p>
+                                </div> 
+                            </div>
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/sel_agora_tambem.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Experiments with paper textures and different elements.</p>
+                                </div> 
                             </div>
                         </div>
                     </div>
