--- a/about_me.html
+++ b/about_me.html
@@ -148,7 +148,7 @@
             </div>
         </div>
     </header>
-    <main class="about_me">
+    <main class="about_me fade-in">
         <div class="container-fluid">
             <div class="row show-large">
                 <div class="offset-1 col-4 info too-much-text">
