--- a/cereais.html
+++ b/cereais.html
@@ -141,7 +141,7 @@
             </div>
         </div>
     </header>
-    <main class="a-project green-element cereais">
+    <main class="a-project green-element cereais fade-in">
         <div class="container-fluid">
             <div class="row show-large">
                 <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
