--- a/seixal_terno.html
+++ b/seixal_terno.html
@@ -145,7 +145,7 @@
             </div>
         </div>
     </header>
-    <main class="a-project blue-element seixal_terno">
+    <main class="a-project blue-element seixal_terno fade-in">
         <div class="container-fluid">
             <div class="row show-large">
                 <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
