--- a/index.html
+++ b/index.html
@@ -159,20 +159,21 @@
                     </div> -->
                     <div class="align-items-center index-carousel d-flex row px-0">
                         <div class="slide fade-in">
-                            <img class="bg-image" href="images/seixal_poster_mockup_insta.jpg" alt="Background image">
-                            <a href="seixal_terno.html" class="big-red" style="--bg-image: url('images/seixal_poster_mockup_insta.jpg');">
+                            <a href="seixal_terno.html" class="big-red">
+                                <img class="bg-image" src="images/seixal_poster_mockup_insta.jpg" alt="">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
                                         <p class="titulo mb-0">Seixal Terno</p>
                                     </div>
                                     <div class="tags">
-                                        <p>design</p>
+                                        <p>brand design | social media design</p>
                                     </div>
                                 </div>
-                            </a>
+                              </a>
                         </div>
                         <div class="slide fade-in">
-                            <a href="roterdao.html" class="big-green no-style">
+                            <a href="roterdao.html" class="big-green">
+                                <img class="bg-image" src="images/coaster_roterdao.jpg" alt="">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
                                         <p class="titulo mb-0">Roterdão Club</p>
@@ -185,6 +186,7 @@
                         </div>
                         <div class="slide fade-in">
                             <a href="sel.html" class="big-blue no-style">
+                                <img class="bg-image" src="images/pc_site_sel.jpg" alt="">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
                                         <p class="titulo mb-0">Sinais em Linha</p>
