mobile debug index

--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
                             </a>
                         </div>
                         <div class="slide fade-in">
-                            <a href="sel.html" class="big-blue no-style">
+                            <a href="sel.html" class="big-blue">
                                 <img class="bg-image" src="images/pc_site_sel.jpg" alt="">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
                                         <p class="titulo mb-0">Sinais em Linha</p>
                                     </div>
                                     <div class="tags">
-                                        <p>design</p>
+                                        <p>brand design | social media design</p>
                                     </div>
                                 </div>                        
                             </a>
