--- a/roterdao.html
+++ b/roterdao.html
@@ -197,7 +197,7 @@
                     </div>
                     <div class="justify-content-center">more projects</div>
                     <div class="p-0">
-                        <a class="no-style" href="cereais.html">></a>
+                        <!-- <a class="no-style" href="cereais.html">></a> -->
                     </div>
                 </div>  
             </div>
@@ -209,7 +209,7 @@
                         </div>
                         <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
-                            <a class="no-style" href="cereais.html">></a>
+                            <!-- <a class="no-style" href="cereais.html">></a> -->
                         </div>
                     </div>
                 </div>
